# Chinese-National-College-SmartCar-Compeition

./: .gitignore  README.md
iris_lama/iris_lama/: CMakeLists.txt
logic_module/: CMakeLists.txt  obj.names  package.xml  setup.py
logic_module/launch/: all_picture.launch  extreme_fast.launch  soundplay_node.launch
logic_module/scripts/: people_point.txt  play-modified(3).py  play-modified8.3.py  play-modified8.5.py  play.py  play135.py  play147.py  play156.py  play_8_4.py  play_8_5.py  play_all_pictures.py  play_no_stop.py  play_old.py  play_turn_around.py  ros_detect_qrcode.py  take_photos.py  turn_around.py
logic_moudle/: catkin_make.txt
logic_moudle/sound_play/: CMakeLists.txt  all_picture.launch  extreme_fast.launch  package.xml  soundplay_node.launch
logic_moudle/sound_play/scripts/: people_point.txt  play-modified(3).py  play-modified8.5.py  play.py  play135.py  play156.py  play_8_4.py  play_8_5.py  play_old.py  play_turn_around.py  ros_detect_qrcode.py  turn_around.py
robot_localization/launch/: ekf_template.launch
robot_localization/params/: ekf_params.yaml  ekf_template.yaml
ucar_cam/: package.xml
ucar_cam/scripts/: usb_camera.py
ucar_controller/: README.md  package.xml
ucar_controller/config/: driver_params_mini.yaml  ekf_params.yaml
ucar_controller/include/ucar_controller/: base_driver.h
ucar_controller/launch/: base_driver.launch  tf_server.launch
ucar_controller/log_info/: car_Mileage_info.txt
ucar_controller/scripts/: performance_test.py  sensor_tf_server.py
ucar_controller/src/: base_driver.cpp
ucar_map/: package.xml
ucar_map/cfg/: carto_2d.lua  rviz.rviz
ucar_map/launch/: .gmapping.launch.swp  gmapping.launch  rviz.launch  ucar_mapping.launch
ucar_map/maps/: map1.pgm  map1.yaml
ucar_nav/: map1.pgm  package.xml
ucar_nav/launch/: all_picture.launch  ekf_navi.launch  extreme_fast.launch  navi_without_camera.launch  take_photos.launch  ucar_navigation.launch
ucar_nav/launch/config/: ost.yaml
ucar_nav/launch/config/amcl/: amcl_omni.launch
ucar_nav/launch/config/teb/: base_global_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb.yaml  teb_local_planner_params.yaml
ucar_nav/maps/: .map1.yaml.swp  map.pgm  map1-original.pgm  map1.pgm  map1.yaml
ucar_nav/src/: map.cpp
xf_mic_asr_offline/: CMakeLists.txt
xf_mic_asr_offline/audio/: vvui_deno.pcm
xf_mic_asr_offline/config/: mic_offline_params.yaml
xf_mic_asr_offline/config/msc/res/asr/GrmBuilld/temp/: call.g  call_16K
xf_mic_asr_offline/include/: user_interface.h
xf_mic_asr_offline/launch/: xf_mic_asr_offline.launch
xf_mic_asr_offline/scripts/: test.py
xf_mic_asr_offline/src/: client (copy).cpp  client.cpp  hid_test_auto (copy).cpp  hid_test_auto.cpp
xf_mic_asr_offline/tmp/system/: cae.ini  filler.txt  keyword.irf
ydlidar/launch/: gazebo.launch  lidar.launch  ydlidar.launch
yolov4-for-darknet_ros/darknet_ros/darknet_ros/: CMakeLists.txt
yolov4-for-darknet_ros/darknet_ros/darknet_ros/config/: yolov4-2.yaml  yolov4.yaml
yolov4-for-darknet_ros/darknet_ros/darknet_ros/launch/: darknet_ros.launch  yolo_v4.launch
yolov4-for-darknet_ros/darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov4-tiny-2.cfg  yolov4-tiny.cfg
