<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>logic_module</name>
   <version>0.3.11</version>
   <description>
      logic_module of the whole project.
   </description>
   <maintainer email="1853692@tongji.edu.cn">ZiqiHan</maintainer>
   <author>Ziqi Han</author>
   <license>BSD</license>

   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
   <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

   <build_depend>roscpp</build_depend>
   <build_depend>roslib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>audio_common_msgs</build_depend>
   <build_depend>diagnostic_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>darknet_ros_msgs</build_depend>

   <exec_depend>roscpp</exec_depend>
   <exec_depend>roslib</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>audio_common_msgs</exec_depend>
   <exec_depend>diagnostic_msgs</exec_depend>
   <exec_depend>darknet_ros_msgs</exec_depend>

   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-gi</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-gi</exec_depend>
   <exec_depend>gstreamer1.0</exec_depend>
   <exec_depend>gstreamer1.0-alsa</exec_depend>
   <exec_depend>gstreamer1.0-plugins-base</exec_depend>
   <exec_depend>gstreamer1.0-plugins-ugly</exec_depend>
   <exec_depend>gstreamer1.0-plugins-good</exec_depend>

   <exec_depend>rospy</exec_depend>
   <exec_depend>festival</exec_depend>
   <exec_depend>message_runtime</exec_depend>

   <export>
      <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp" />
   </export>
</package>
